Fix invisible arrows on latest ionic versions. Closes #8

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 
 .idp-control-arrow {
   width: 100%;
+  color: #dddddd;
 }
 
 .idp-control-arrow > .icon::before {
